@startuml

package "com.baiye959.myblog_backend.controller" {
    class UserController {
        - UserService userService
        + userRegister(userRegisterRequest: UserRegisterRequest): BaseResponse<Long>
        + userLogin(userLoginRequest: UserLoginRequest, request: HttpServletRequest): BaseResponse<User>
        + userSetting(user: User, request: HttpServletRequest): BaseResponse<User>
        + userLogout(request: HttpServletRequest): BaseResponse<Integer>
        + getCurrentUser(request: HttpServletRequest): BaseResponse<User>
        + searchUsers(username: String, request: HttpServletRequest): BaseResponse<List<User>>
        + updateUser(user: User, request: HttpServletRequest): BaseResponse<User>
        + getAllUser(): BaseResponse<List<User>>
        + deleteUser(user: User, request: HttpServletRequest): BaseResponse<Boolean>
        - isAdmin(request: HttpServletRequest): boolean
    }
}

package "com.baiye959.myblog_backend.model.domain.request" {
    class UserLoginRequest {
        - String email
        - String userPassword
    }

    class UserRegisterRequest {
        - String username
        - String email
        - String userPassword
    }
}

package "com.baiye959.myblog_backend.model.domain" {
    class User {
        - Long id
        - String username
        - String avatarUrl
        - String userPassword
        - String email
        - Integer userStatus
        - Date createTime
        - Date updateTime
        - Integer isDelete
        - Integer userRole
    }
}

package "com.baiye959.myblog_backend.service.impl" {
    class UserServiceImpl {
        - UserMapper userMapper
        - static final String SALT
        + userRegister(username: String, email: String, userPassword: String): Long
        + userLogin(email: String, userPassword: String, request: HttpServletRequest): User
        + getSafetyUser(originUser: User): User
        + userLogout(request: HttpServletRequest): Integer
        + userSetting(userId: Long, userName: String, email: String, avatarUrl: String, request: HttpServletRequest): User
        + userUpdate(userId: Long, userRole: Integer, userStatus: Integer, request: HttpServletRequest): User
        + getAllUser(): List<User>
    }
}

UserController --> UserService
UserLoginRequest --|> Serializable
UserRegisterRequest --|> Serializable
User --> Serializable
UserService --> UserMapper
User --> Serializable

@enduml
